<resources>
    <string name="app_name">Parotia</string>
    <string name="title_feed">Feed</string>
    <string name="title_collection_list">Collections</string>
    <string name="title_search_entry">Search</string>
    <string name="title_account">Account</string>
    <string name="title_login_prompt">Login Prompt</string>
    <string name="title_profile">Profile</string>
    <string name="title_search_pager">Search</string>
    <string name="title_photo">Photo</string>
    <string name="title_collection">Collection</string>

    <string name="search_explore">Explore</string>
    <string name="search_type_photo">Photos</string>
    <string name="search_type_collection">Collections</string>
    <string name="search_type_user">People</string>
    <string name="search_input_hint">Search photos, collections, and people</string>
    <string name="search_history">History</string>

    <string name="feed_popular_title">Popular</string>
    <string name="feed_latest_title">Latest</string>

    <string name="collection_related_title">You might also like</string>

    <string name="profile">Profile</string>
    <string name="profile_login_prompt">Log in your unsplash account to unlock more features</string>
    <string name="profile_btn_login">Log in</string>

    <string name="shared_search_layout">searchLayout</string>
    <string name="shared_search_bar">searchBar</string>
    <string name="shared_search_icon">searchIcon</string>
    <string name="shared_search_hint_text">searchHintText</string>
    <string name="shared_search_history_title">searchHistoryTitle</string>
    <string name="shared_search_history_group">searchHistoryGroup</string>

    <string name="views">Views</string>
    <string name="downloads">Downloads</string>
    <string name="likes">Likes</string>

    <string name="camera_make_title">Camera Make</string>
    <string name="camera_model_title">Camera Model</string>
    <string name="focal_length_title">Focal Length</string>
    <string name="aperture_title">Aperture</string>
    <string name="shutter_speed_title">Shutter Speed</string>
    <string name="iso_title">ISO</string>
    <string name="dimensions_title">Dimensions</string>

    <string name="retry_button">Retry</string>
</resources>